# chick

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  fly.toml  pyproject.toml
.github/workflows/: build.yml
chick/: bot.py  main.py
jg/chick/: bot.py  main.py  web.py
jg/chick/lib/: intro.py  reviews.py  threads.py
juniorguru_chick/: bot.py  kure.py  main.py  web.py
juniorguru_chick/lib/: intro.py  intro_emojis.py  thread_names.py  threads.py
src/jg/chick/: api.py  bot.py  main.py  web.py
src/jg/chick/lib/: __init__.py  config.py  interests.py  intro.py  reviews.py  thread_export.py  threads.py
tests/: test_api.py  test_bot.py  test_intro_emojis.py  test_lib_interests.py  test_lib_intro.py  test_lib_intro_emojis.py  test_lib_reviews.py  test_lib_thread_export.py  test_lib_thread_names.py
tests/fixtures/: eggtray_comment.md  eggtray_comment_bashynx.json
