[tool.poetry]
name = "jg.chick"
version = "0.0"
description = "A real-time, synchronous junior.guru Discord bot"
authors = ["Honza Javorek <honza@junior.guru>"]
license = "AGPL-3.0-only"
readme = "README.md"
homepage = "https://junior.guru/"
repository = "https://github.com/juniorguru/chick/"
packages = [{ include = "jg" }]

[tool.poetry.scripts]
chick = "jg.chick.main:main"

[tool.poetry.dependencies]
python = "~3.12"
py-cord = { git = "https://github.com/Pycord-Development/pycord.git", extras = ["speed"] }  # see also Dockerfile!
aiohttp = "3.12.15"
"jg.hen" = { git = "https://github.com/juniorguru/hen.git" }
click = "8.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "8.4.2"
pytest-asyncio = "1.1.0"
pytest-ruff = "0.5"
ruff = "0.12.*"

[tool.pytest.ini_options]
python_files = "test_*.py"
testpaths = "."
addopts = "--ff --ruff --ruff-format"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2
known-third-party = ["jg.hen"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
