[project]
name = "jg.chick"
version = "0.0.1"
description = "A real-time, synchronous junior.guru Discord bot"
readme = "README.md"
authors = [{name = "Honza Javorek", email = "honza@junior.guru"}]
license = {text = "AGPL-3.0-only"}
requires-python = ">=3.13,<3.14"
dependencies = [
    "aiohttp>=3.13.1",
    "click>=8.3.0",
    "jg.eggtray@git+https://github.com/juniorguru/eggtray.git",
    "jg.hen@git+https://github.com/juniorguru/hen.git",
    "py-cord[speed]@git+https://github.com/Pycord-Development/pycord.git",
    "pydantic>=2.12.3",
]

[project.urls]
homepage = "https://junior.guru/"
repository = "https://github.com/juniorguru/chick/"

[project.scripts]
chick = "jg.chick.main:main"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.2.0",
    "pytest-ruff>=0.5",
    "pytest>=8.4.2",
    "ruff>=0.14.0",
]

[tool.pytest.ini_options]
python_files = "test_*.py"
testpaths = "tests"
addopts = "--import-mode=importlib --ff --ruff --ruff-format"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2
known-third-party = ["jg.eggtray", "jg.hen"]

[build-system]
requires = ["uv_build>=0.8.11,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "jg.chick"
